appId: com.google.samples.apps.nowinandroid.demo.debug
name: Bookmarks
tags:
  - android
  - passing
---
- installApp: "../../apps/nowinandroid.apk"
- launchApp:
    clearState: true
- tapOn: Headlines
- tapOn: Done
- tapOn: Bookmark
- tapOn: Saved
- tapOn: Unbookmark
- assertVisible: No saved updates
