url: https://www.saucedemo.com/inventory.html
name: ClearState command should clear state
tags:
  - passing
  - web
---
- launchApp:
    clearState: true

- tapOn: Username
- inputText: standard_user
- tapOn: Password
- inputText: secret_sauce
- tapOn: Login

- assertVisible: Products

- clearState
- launchApp

- assertVisible: Username
- assertVisible: Password
- assertVisible: Login
- assertNotVisible: Products
