url: https://www.saucedemo.com/inventory.html
name: LaunchApp should clear state when clearState is true
tags:
  - passing
  - web
---
- launchApp:
    clearState: true

- tapOn: Username
- inputText: standard_user
- tapOn: Password
- inputText: secret_sauce
- tapOn: Login

- assertVisible: Products

- launchApp:
    url: https://www.saucedemo.com/inventory.html
    clearState: true

- assertVisible: Username
- assertVisible: Password
- assertVisible: Login
- assertNotVisible: Products
