url: "http://127.0.0.1:${typeof MAESTRO_FIXTURES_PORT === 'undefined' ? 7357 : MAESTRO_FIXTURES_PORT}/date_input.html"
name: Date input should accept compact text
tags:
  - passing
  - web
---
- launchApp
- tapOn: Date of birth
- inputText: "02111990"
- assertVisible: "1990-02-11"
