url: https://www.saucedemo.com/inventory.html
name: LaunchApp should not clear state
tags:
  - passing
  - web
---
- launchApp:
    clearState: true

- tapOn: Username
- inputText: standard_user
- tapOn: Password
- inputText: secret_sauce
- tapOn: Login

- assertVisible: Products

- launchApp # Should not clear state

- assertVisible: Products
- assertVisible: Sauce Labs Backpack
- assertVisible: Sauce Labs Bike Light
- assertNotVisible: Login
