appId: "http://127.0.0.1:${typeof MAESTRO_FIXTURES_PORT === 'undefined' ? 7357 : MAESTRO_FIXTURES_PORT}/spa_navigation.html"
tags:
  - web
  - passing
---
- launchApp
- assertVisible: "Login"
- tapOn: "Log In"
- assertVisible: "Dashboard"
