appId: org.wikipedia
---
- launchApp:
    clearState: true
- tapOn:
      text: "Non existent view"
      optional: true
- tapOn: "Forward"
- tapOn: "Forward"
- tapOn: "Forward"
- tapOn: "Skip"
