appId: org.wikimedia.wikipedia
tags:
  - ios
  - passing
  - advanced
---
- runFlow: subflows/onboarding-ios.yaml

# Dismiss the auth modal if visible
- runFlow:
    when:
      visible: "You have been logged out"
    commands:
      - tapOn:
          text: "Continue without logging in"

- tapOn: Buscar en Wikipedia
- runScript: scripts/getSearchQuery.js
- inputText: ${output.result}
- eraseText
- inputText: qwerty
- assertVisible: ${output.result}
- runFlow: subflows/launch-clearstate-ios.yaml
