appId: "com.google.android.apps.maps"
---
- launchApp
- tapOn: Skip
- setLocation:
    longitude: 2.295188
    latitude: 48.8578065
- assertVisible: .*Eiffel.*
- setLocation:
    latitude: 43.7230
    longitude: 10.3966
- assertVisible: .*Piazza.*