appId: "com.google.android.documentsui"
---
- addMedia:
    - "./src/test/resources/media/assets/drums.mp3"
- launchApp
- tapOn: "Show roots"
- tapOn:
    id: "android:id/title"
    index: 3
- tapOn: "Unknown"
- tapOn: "Music"
- assertVisible: "drums.mp3"

